--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.6.5",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3"
